# secret-dapp

./: README.md
contracts/: README.md
contracts/secret-prisoner-game-contract/: .gitignore  Cargo.toml  Makefile
contracts/secret-prisoner-game-contract/examples/: schema.rs
contracts/secret-prisoner-game-contract/src/: contract.rs  lib.rs  msg.rs  random.rs  state.rs  types.rs
contracts/secret-prisoner-minter/: Cargo.toml  Makefile
contracts/secret-prisoner-minter/examples/: schema.rs
src/: assym.ts  sim.ts
