[package]
name = "secret-prisoner-minter"
version = "0.1.0"
authors = ["Ben Adams <darwinzero@gmail.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = []
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
debug-print = ["cosmwasm-std/debug-print"]

[dependencies]
cosmwasm-std = { git = "https://github.com/scrtlabs/SecretNetwork", version="0.10.0", package = "secret-cosmwasm-std" }
cosmwasm-storage = { git = "https://github.com/scrtlabs/SecretNetwork", version="0.10.0", package = "secret-cosmwasm-storage" }
secret-toolkit = { git = "https://github.com/darwinzer0/secret-toolkit", rev = "50c5235a67cea70003f2278255647c8a64769b5a", features = ["permit"] }
serde-json-wasm = "0.2.1"
schemars = "0.7"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
snafu = { version = "0.6.3" }
bincode2 = "2.0.1"
subtle = { version = "2.2.3", default-features = false }
base64 = "0.12.3"
hex = "0.4.2"
primitive-types = { version = "0.9.0", default-features = false }
rand_chacha = { version = "0.2.2", default-features = false }
rand_core = { version =  "0.5.1", default-features = false }
sha2 = { version = "0.9.1", default-features = false }

[dev-dependencies]
cosmwasm-schema = { version = "0.9.2" }